--- a/style.css
+++ b/style.css
@@ -1,15 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+
 body{
-    color:blue
-}
-h1{
-    color:green
-}
-h2{
-    color:purple
-}
-#lib-header{
-    color:gray
-}
-.para{
-    color:pink
+    font-family:'Montserrat',
+    sans-serif;
 }
