--- a/style.css
+++ b/style.css
@@ -1,10 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-.root{
-    --primary-color:rgb(0, 89, 255);
+:root{
+    --primary-color:blue;
 }
 body{
     font-family:'Montserrat',
     sans-serif;
+}
+hr{
+    margin:2rem 0rem ;
 }
 /* container */
 .container{
@@ -30,4 +33,17 @@ body{
     border-radius:0.5rem;
     border:1px solid var(--primiary-color);
     color:white
+
+}
+
+
+
+/* list's */
+.list-non-bullet{
+    list-style:none;
+}
+
+.list-item-inline{
+    display:inline;
+    padding:0rem 0.5rem;
 }
