--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
 :root{
     --primary-color:blue;
+    --dark-gray:#6B7280;
 }
 body{
     font-family:'Montserrat',
@@ -66,9 +67,26 @@ hr{
     color:white;
 }
 
-div.a{
-    text-align:right;
-}
+
 .navigation .link-active{
     font-weight:bold;
+}
+
+/* header */
+.hero{
+    padding:2rem;
+}
+.hero .hero-img{
+    max-width:350px;
+    display:block;
+    margin:auto;
+}
+
+.hero .hero-heading{
+    color: var(--dark-gray);
+    padding-top: 1rem;
+}
+
+.hero .hero-heading .heading-inverted{
+    color:var(--primary-color);
 }
