--- a/style.css
+++ b/style.css
@@ -1,92 +1,119 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
-:root{
-    --primary-color:blue;
-    --dark-gray:#6B7280;
-}
-body{
-    font-family:'Montserrat',
-    sans-serif;
-}
-hr{
-    margin:2rem 0rem ;
-}
-/* container */
-.container{
+
+:root {
+    --primary-color: blue;
+    --of-white:#D1D5DB;
+    --dark-gray: #6B7280;
    
+}
+
+body {
+    font-family: 'Montserrat',
+        sans-serif;
+}
+
+hr {
+    margin: 2rem 0rem;
+}
+
+/* container */
+.container {
+
     padding: 0rem 1 rem;
 }
-.container-center:{
-    max-width:600px;
-    margin:auto;
+
+.container-center: {
+    max-width: 600px;
+    margin: auto;
 }
+
 /* links */
-.link{
+.link {
     text-decoration: none;
     padding: 0.5rem 1rem;
 }
-.link-primary{
-    background-color: var(--primary-color);
-    border-radius:0.5rem;
-    color:white
-}
-.link-secondary{
-    background-color: var(--primary-color);
-    border-radius:0.5rem;
-    border:1px solid var(--primiary-color);
-    color:white
 
+.link-primary {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    color: white
+}
+
+.link-secondary {
+    background-color: var(--primary-color);
+    border-radius: 0.5rem;
+    border: 1px solid var(--primiary-color);
+    color: white
 }
 
 
 
 /* list's */
-.list-non-bullet{
-    list-style:none;
+.list-non-bullet {
+    list-style: none;
 }
 
-.list-item-inline{
-    display:inline;
-    padding:0rem 0.5rem;
+.list-item-inline {
+    display: inline;
+    padding: 0rem 0.5rem;
 }
+
 /* navigation */
-.navigation{
+.navigation {
     background-color: var(--primary-color);
-    color:white;
-    padding:1rem;
+    color: white;
+    padding: 1rem;
     border-bottom-left-radius: 1rem;
 }
-.navigation  .nav-brand{
+
+.navigation .nav-brand {
     font-weight: bold;
-    font-size:1.1rem;
-}
-.navigation .nav-pills{
-    text-align:right;
+    font-size: 1.1rem;
 }
 
-.navigation .link{
-    color:white;
+.navigation .nav-pills {
+    text-align: right;
+}
+
+.navigation .link {
+    color: white;
 }
 
 
-.navigation .link-active{
-    font-weight:bold;
+.navigation .link-active {
+    font-weight: bold;
 }
 
 /* header */
-.hero{
-    padding:2rem;
-}
-.hero .hero-img{
-    max-width:350px;
-    display:block;
-    margin:auto;
+.hero {
+    padding: 2rem;
 }
 
-.hero .hero-heading{
+.hero .hero-img {
+    max-width: 350px;
+    display: block;
+    margin: auto;
+}
+
+.hero .hero-heading {
     color: var(--dark-gray);
     padding-top: 1rem;
 }
 
-.hero .hero-heading .heading-inverted{
-    color:var(--primary-color);
+.hero .hero-heading .heading-inverted {
+    color: var(--primary-color);
+}
+
+/* sections */
+.section{
+    padding: 2rem;
+}
+.section h1 {
+    text-align: center;
+   
+
+}
+
+ow{
+background-color: var(--off-white);
 }
