--- a/style.css
+++ b/style.css
@@ -1,16 +1,16 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@700&family=Duru+Sans&family=Kanit:wght@400;500&family=Nanum+Gothic:wght@800&display=swap');
 
 :root {
-    --primary-color: blue;
-    --off-white:#D1D5DB;
-    --dark-gray: #6B7280;
+    --primary-color:#F59E0B;
+    --off-white:#D97706;
+    --dark-gray:#F3F4F6;
    
 }
 
 body {
-    font-family: 'Montserrat',
-        sans-serif;
+    font-family: 'Comfortaa', cursive;
         margin:0px;
+        
 }
 
 hr {
@@ -30,8 +30,11 @@ hr {
 
 /* links */
 .link {
+    box-sizing: border-box;
     text-decoration: none;
     padding: 0.5rem 1rem;
+    /* margin-top:1rem;
+    margin-bottom:1rem; */
 }
 
 .link-primary {
@@ -90,7 +93,7 @@ hr {
 
 /* header */
 .hero {
-    padding: 2rem;
+    padding: 5rem;
 }
 
 .hero .hero-img {
@@ -101,7 +104,7 @@ hr {
 
 .hero .hero-heading {
     text-align:center;
-    color: var(--dark-gray);
+    color: var(--off-white);
     padding-top: 1rem;
 }
 
@@ -136,6 +139,10 @@ background-color: var(--off-white);
 .footer .link{
     color:white;
     
+}
+.footer .footer-header{
+    font-weight:bold;
+    font-size:large;
 }
 .footer ul {
     padding-inline-start: 0px;
